<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/back"/>
        <TextView
            android:id="@+id/topic_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="全部"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="类型"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/sousuo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/sousuo"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/sousuo_hot"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/sousuo"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hui"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/hot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/hot_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hui"
                android:text="热销"
                android:textSize="16dp"
                android:layout_centerInParent="true"/>
            <LinearLayout
                android:id="@+id/hot_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="热销"
                    android:textSize="19dp"
                    android:textColor="@color/blue"
                    />
                <View
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:background="@color/blue"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/all_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hui"
                android:text="全部"
                android:textSize="16dp"
                android:layout_centerInParent="true"
                />
            <LinearLayout
                android:id="@+id/all_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="全部"
                    android:textSize="19dp"
                    android:textColor="@color/blue"
                    />
                <View
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:background="@color/blue"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/yourself"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/yourself_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="自选"
                    android:textSize="19dp"
                    android:textColor="@color/blue"
                    />
                <View
                    android:layout_width="40dp"
                    android:layout_height="2dp"
                    android:background="@color/blue"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/yourself_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hui"
                android:text="自选"
                android:textSize="16dp"
                android:layout_centerInParent="true"/>


        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
