<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="120dp"
    android:layout_height="match_parent"
    android:background="@drawable/type_select_bg">
    <ListView
        android:id="@+id/type_list"
        android:contentDescription="类型选择窗口"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/hui"
        android:dividerHeight="0.2dp">

    </ListView>
</LinearLayout>