<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/allFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <LinearLayout
...
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </RelativeLayout>
    <com.example.yuanjc.myapplication1.view.customView.RefreshAndLoadListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    </com.example.yuanjc.myapplication1.view.customView.RefreshAndLoadListView>
</LinearLayout>
